removed a variety of lint warnings from the code, tested on api version 17